Modificado o bloco inicial, para o laranja

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <div class="section__content">
           <h1 class="logo">Treinafácil</h1>
           <p class="intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, quidem asperiores. In, iusto.</p>
-          <a class="btn-game btn-game--primary --mx-auto js-navigation-item" data-target="1">
-            <span class="btn-game__text">Como?</span>
+          <a class="btn-game btn-game--contrast --mx-auto js-navigation-item" data-target="1">
+            <span class="btn-game__text">Como funciona?</span>
           </a>
         </div>
       </section>
