Testes com svg para linkar box de informação com a cabana selecionada

--- a/index.html
+++ b/index.html
@@ -51,8 +51,46 @@
       </section>
       <section class="section section--mountain">
         <div class="section__content">
-          <div class="board board--mountain">
-
+          <div class="board board--mountain" id="board-1">
+            <div class="info-box info-box--mountain-1 js-content" id="content-1">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Motivação</h2>
+                <p class="info-box__text">Com uma interface lúdica e divertida, a plataforma transforma seus colaboradores em jogadores, facilitando e estimulando um melhor aprendizado.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--mountain-2 js-content" id="content-2">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Engajamento</h2>
+                <p class="info-box__text">Os jogadores tem a missão de superar "desafios" até chegar ao topo da montanha, concluíndo o treinamento. Cada desafio é um módulo com aulas e provas que podem ser criadas em diversos formatos.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--mountain-3 js-content" id="content-3">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Competitividade</h2>
+                <p class="info-box__text">Através de rankings dinâmicos, os colaboradores são incentivados a uma animada competição para determinar quem é o melhor jogador da turma.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--mountain-4 js-content" id="content-4">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Recompensa</h2>
+                <p class="info-box__text">De acordo com os resultados de cada módulo, os jogadores são premiados com medalhas, reconhecendo a dedicação e as conquistas de cada um.</p>
+              </div>
+            </div>
+            <div class="board__place">
+              <img src="assets/img/board-montanha.png" alt="" class="board__image">
+              <a
+                data-content="content-1" 
+                class="board__module board__module--mountain board__module--m1 js-module"></a>
+              <a 
+                data-content="content-2"
+                class="board__module board__module--mountain board__module--m2 js-module"></a>
+              <a 
+                data-content="content-3"
+                class="board__module board__module--mountain board__module--m3 js-module"></a>
+              <a 
+                data-content="content-4"
+                class="board__module board__module--mountain board__module--m4 js-module"></a>
+            </div>
           </div>
         </div>
       </section>
@@ -74,7 +112,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.5/svg.min.js"></script>
     <script src="assets/js/scripts.js"></script>
   </body>
 </html>
