adicionadas setas nos box dos módulos

--- a/index.html
+++ b/index.html
@@ -56,22 +56,37 @@
               <div class="info-box__content">
                 <h2 class="info-box__title">Motivação</h2>
                 <p class="info-box__text">Com uma interface lúdica e divertida, a plataforma transforma seus colaboradores em jogadores, facilitando e estimulando um melhor aprendizado.</p>
+                <a 
+                  class="info-box__arrow info-box__arrow-right js-show-content" 
+                  data-direction="left"
+                  data-content="content-2">Next</a>
               </div>
             </div>
             <div class="info-box info-box--mountain-2 js-content" id="content-2">
               <div class="info-box__content">
+                <a class="info-box__arrow info-box__arrow-left js-show-content" data-content="content-1">Prev</a>
                 <h2 class="info-box__title">Engajamento</h2>
                 <p class="info-box__text">Os jogadores tem a missão de superar "desafios" até chegar ao topo da montanha, concluíndo o treinamento. Cada desafio é um módulo com aulas e provas que podem ser criadas em diversos formatos.</p>
+                <a 
+                  class="info-box__arrow info-box__arrow-right js-show-content" 
+                  data-direction="left"
+                  data-content="content-3">Next</a>
               </div>
             </div>
             <div class="info-box info-box--mountain-3 js-content" id="content-3">
               <div class="info-box__content">
+                <a class="info-box__arrow info-box__arrow-left js-show-content" data-content="content-2">Prev</a>
                 <h2 class="info-box__title">Competitividade</h2>
                 <p class="info-box__text">Através de rankings dinâmicos, os colaboradores são incentivados a uma animada competição para determinar quem é o melhor jogador da turma.</p>
+                <a 
+                  class="info-box__arrow info-box__arrow-right js-show-content" 
+                  data-direction="left"
+                  data-content="content-4">Next</a>
               </div>
             </div>
             <div class="info-box info-box--mountain-4 js-content" id="content-4">
               <div class="info-box__content">
+                <a class="info-box__arrow info-box__arrow-left js-show-content" data-content="content-3">Prev</a>
                 <h2 class="info-box__title">Recompensa</h2>
                 <p class="info-box__text">De acordo com os resultados de cada módulo, os jogadores são premiados com medalhas, reconhecendo a dedicação e as conquistas de cada um.</p>
               </div>
@@ -80,16 +95,16 @@
               <img src="assets/img/board-montanha.png" alt="" class="board__image">
               <a
                 data-content="content-1" 
-                class="board__module board__module--mountain board__module--m1 js-module"></a>
+                class="board__module board__module--mountain board__module--m1 js-module js-show-content"></a>
               <a 
                 data-content="content-2"
-                class="board__module board__module--mountain board__module--m2 js-module"></a>
+                class="board__module board__module--mountain board__module--m2 js-module js-show-content"></a>
               <a 
                 data-content="content-3"
-                class="board__module board__module--mountain board__module--m3 js-module"></a>
+                class="board__module board__module--mountain board__module--m3 js-module js-show-content"></a>
               <a 
                 data-content="content-4"
-                class="board__module board__module--mountain board__module--m4 js-module"></a>
+                class="board__module board__module--mountain board__module--m4 js-module js-show-content"></a>
             </div>
           </div>
         </div>
