--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="//fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.1">
     <title>Treinafácil</title>
   </head>
   <body>
