melhorada a inteligência da linha; implementado terceiro bloco

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="//fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.1">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.2">
     <title>Treinafácil</title>
   </head>
   <body>
@@ -96,7 +96,47 @@
       </section>
       <section class="section section--space">
         <div class="section__content">
-          <div class="board board--space"></div>
+          <div class="board board--space" id="board-2">
+            <div class="info-box info-box--space-1 js-content" id="content-5">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Motivação</h2>
+                <p class="info-box__text">Com uma interface lúdica e divertida, a plataforma transforma seus colaboradores em jogadores, facilitando e estimulando um melhor aprendizado.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--space-2 js-content" id="content-6">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Engajamento</h2>
+                <p class="info-box__text">Os jogadores tem a missão de superar "desafios" até chegar ao topo da montanha, concluíndo o treinamento. Cada desafio é um módulo com aulas e provas que podem ser criadas em diversos formatos.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--space-3 js-content" id="content-7">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Competitividade</h2>
+                <p class="info-box__text">Através de rankings dinâmicos, os colaboradores são incentivados a uma animada competição para determinar quem é o melhor jogador da turma.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--space-4 js-content" id="content-8">
+              <div class="info-box__content">
+                <h2 class="info-box__title">Recompensa</h2>
+                <p class="info-box__text">De acordo com os resultados de cada módulo, os jogadores são premiados com medalhas, reconhecendo a dedicação e as conquistas de cada um.</p>
+              </div>
+            </div>
+            <div class="board__place">
+              <img src="assets/img/board-espaco.png" alt="" class="board__image">
+              <a
+                data-content="content-5" 
+                class="board__module board__module--space board__module--s1 js-module"></a>
+              <a 
+                data-content="content-6"
+                class="board__module board__module--space board__module--s2 js-module"></a>
+              <a 
+                data-content="content-7"
+                class="board__module board__module--space board__module--s3 js-module"></a>
+              <a 
+                data-content="content-8"
+                class="board__module board__module--space board__module--s4 js-module"></a>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section section--even">
@@ -114,6 +154,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.5/svg.min.js"></script>
-    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.1"></script>
+    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.2"></script>
   </body>
 </html>
