Adicionado o conteúdo correto dos box na parte do espaço

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="//fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.3">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.4">
     <title>Treinafácil</title>
   </head>
   <body>
@@ -29,7 +29,7 @@
           <li class="navigation__item js-navigation-item" data-target="0">
             <a class="navigation__link">1</a>
           </li>
-          <li class="navigation__item js-navigation-item" data-target="1">
+          <li class="navigation__item js-navigation-item js-content" data-target="1" data-content="1">
             <a class="navigation__link">2</a>
           </li>
           <li class="navigation__item js-navigation-item" data-target="2">
@@ -99,26 +99,39 @@
           <div class="board board--space" id="board-2">
             <div class="info-box info-box--space-1 js-content" id="content-5">
               <div class="info-box__content">
-                <h2 class="info-box__title">Motivação</h2>
-                <p class="info-box__text">Com uma interface lúdica e divertida, a plataforma transforma seus colaboradores em jogadores, facilitando e estimulando um melhor aprendizado.</p>
+                <!-- <h2 class="info-box__title">Motivação</h2> -->
+                <p class="info-box__text">Conteúdo para aulas em vídeo, texto, imagem e arquivos para download.</p>
               </div>
             </div>
             <div class="info-box info-box--space-2 js-content" id="content-6">
               <div class="info-box__content">
-                <h2 class="info-box__title">Engajamento</h2>
-                <p class="info-box__text">Os jogadores tem a missão de superar "desafios" até chegar ao topo da montanha, concluíndo o treinamento. Cada desafio é um módulo com aulas e provas que podem ser criadas em diversos formatos.</p>
+                <!-- <h2 class="info-box__title">Engajamento</h2> -->
+                <p class="info-box__text">Cadastro de alunos, turmas e controle de acesso com bloqueio de horário.</p>
+                
               </div>
             </div>
             <div class="info-box info-box--space-3 js-content" id="content-7">
               <div class="info-box__content">
-                <h2 class="info-box__title">Competitividade</h2>
-                <p class="info-box__text">Através de rankings dinâmicos, os colaboradores são incentivados a uma animada competição para determinar quem é o melhor jogador da turma.</p>
+                <!-- <h2 class="info-box__title">Competitividade</h2> -->
+                <p class="info-box__text">Provas com diferentes opções de resposta (objetiva, múltipla escolha, relacionar colunas e verdadeiro ou falso).</p>
               </div>
             </div>
             <div class="info-box info-box--space-4 js-content" id="content-8">
               <div class="info-box__content">
-                <h2 class="info-box__title">Recompensa</h2>
-                <p class="info-box__text">De acordo com os resultados de cada módulo, os jogadores são premiados com medalhas, reconhecendo a dedicação e as conquistas de cada um.</p>
+                <!-- <h2 class="info-box__title">Recompensa</h2> -->
+                <p class="info-box__text">Possibilidade de integração com outros sistemas através da nossa API.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--space-5 js-content" id="content-9">
+              <div class="info-box__content">
+                <!-- <h2 class="info-box__title">Recompensa</h2> -->
+                <p class="info-box__text">Definição de regras para aprovação/reprovação e entrega de medalhas virtuais.</p>
+              </div>
+            </div>
+            <div class="info-box info-box--space-6 js-content" id="content-10">
+              <div class="info-box__content">
+                <!-- <h2 class="info-box__title">Recompensa</h2> -->
+                <p class="info-box__text">Suporte bilíngue com tempo médio de resposta em 12 minutos e 94% de satisfação.</p>
               </div>
             </div>
             <div class="board__place">
@@ -135,6 +148,12 @@
               <a 
                 data-content="content-8"
                 class="board__module board__module--space board__module--s4 js-module"></a>
+              <a 
+                data-content="content-9"
+                class="board__module board__module--space board__module--s5 js-module"></a>
+              <a 
+                data-content="content-10"
+                class="board__module board__module--space board__module--s6 js-module"></a>
             </div>
           </div>
         </div>
@@ -154,6 +173,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.5/svg.min.js"></script>
-    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.3"></script>
+    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.4"></script>
   </body>
 </html>
