--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="//fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.4">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.5">
     <title>Treinafácil</title>
   </head>
   <body>
@@ -29,10 +29,10 @@
           <li class="navigation__item js-navigation-item" data-target="0">
             <a class="navigation__link">1</a>
           </li>
-          <li class="navigation__item js-navigation-item js-content" data-target="1" data-content="1">
+          <li class="navigation__item js-navigation-item js-content" data-target="1" data-content="content-1">
             <a class="navigation__link">2</a>
           </li>
-          <li class="navigation__item js-navigation-item" data-target="2">
+          <li class="navigation__item js-navigation-item js-content-space" data-target="2" data-content="content-5">
             <a class="navigation__link">3</a>
           </li>
           <li class="navigation__item js-navigation-item" data-target="3">
@@ -44,7 +44,7 @@
         <div class="section__content">
           <h1 class="logo">Treinafácil</h1>
           <p class="intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, quidem asperiores. In, iusto.</p>
-          <a class="btn-game btn-game--contrast --mx-auto js-navigation-item" data-target="1">
+          <a class="btn-game btn-game--contrast --mx-auto js-navigation-item js-content" data-target="1" data-content="content-1">
             <span class="btn-game__text">Como funciona?</span>
           </a>
         </div>
@@ -158,11 +158,10 @@
           </div>
         </div>
       </section>
-      <section class="section section--even">
-        <h2>Seção 4</h2>
-        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima facilis iusto in perferendis, incidunt quia aliquid delectus ratione autem deserunt! Ducimus saepe error labore quod, amet tenetur molestias laudantium facilis!</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum animi accusantium eos. Voluptatum earum quisquam necessitatibus ipsum quasi sunt. Ratione dolores adipisci tempore mollitia aut sint iure veniam atque alias!</div>
-        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam possimus illum alias impedit accusantium cupiditate in vel rem dolore amet eos labore id hic eveniet aspernatur, fugit asperiores, ex mollitia.</div>
+      <section class="section section--contact">
+        <div class="section__content">
+          <h2 class="logo logo--alter">Treinafácil</h2>
+        </div>
       </section>
       <footer class="footer">
 
@@ -173,6 +172,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.5/svg.min.js"></script>
-    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.4"></script>
+    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.5"></script>
   </body>
 </html>
