Criando segunda versão do site, index2.html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
     <link href="//fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.5">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-alpha.2.6">
     <title>Treinafácil</title>
   </head>
   <body>
     
     <article>
-      <div class="status-bar">
-        <img src="assets/img/arrow-status.png" alt="" class="status-bar__arrow">
-        <div class="status-bar__progress-bar">
-          <div
-            style="width: 0%"
-            class="status-bar__progress-bar-count js-bar"></div>
+      <div class="menu-bar">
+        <div class="status-bar">
+          <img src="assets/img/arrow-status.png" alt="" class="status-bar__arrow">
+          <div class="status-bar__progress-bar">
+            <div
+              style="width: 0%"
+              class="status-bar__progress-bar-count js-bar"></div>
+          </div>
+          <div class="status-bar__count js-count">0%</div>
         </div>
-        <div class="status-bar__count js-count">0%</div>
+        <h1 class="logo logo--darken">Treinafacil</h1>
       </div>
       <nav class="navigation">
         <ul class="navigation__list js-navigation">
@@ -172,6 +175,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.5/svg.min.js"></script>
-    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.5"></script>
+    <script src="assets/js/scripts.js?v=1.0.0-alpha.2.6"></script>
   </body>
 </html>
