--- a/index2.html
+++ b/index2.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="assets/css/styles2.css">
     <title>Treinafácil</title>
   </head>
-  <body>
-
+  <body id="hm">
     <div class="wrapper">
       <div class="menu-bar">
         <div class="menu-bar__content">
@@ -28,18 +27,24 @@
           </div>
           <a href="" class="btn-menu js-toggle-menu"></a>
           <div class="menu-bar__links">
-            <a href="" class="menu-bar__link">Início</a>
-            <a href="" class="menu-bar__link">Benefícios</a>
-            <a href="" class="menu-bar__link">Recursos</a>
-            <a href="" class="menu-bar__link">Contato</a>
+            <a class="menu-bar__link js-goto-section" data-target="0">Início</a>
+            <a class="menu-bar__link js-goto-section" data-target="1">Benefícios</a>
+            <a class="menu-bar__link js-goto-section" data-target="2">Recursos</a>
+            <a class="menu-bar__link js-goto-section" data-target="3">Contato</a>
           </div>
         </div>
       </div>
+      <section class="section"></section>
+      <section class="section section--mountain"></section>
+      <section class="section section--space"></section>
+      <section class="section section--contact"></section>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
     <script src="assets/js/scripts2.js"></script>
   </body>
 </html>
