--- a/index2.html
+++ b/index2.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="assets/css/styles2.css">
     <title>Treinafácil</title>
   </head>
-  <body id="hm">
-    <div class="wrapper">
+  <body>
+    <div class="wrapper" id="hm">
       <div class="menu-bar">
         <div class="menu-bar__content">
           <h1 class="logo logo--dark">Treinafácil</h1>
@@ -45,6 +45,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
-    <script src="assets/js/scripts2.js"></script>
+    <script src="assets/js/scripts2.js?v=2"></script>
   </body>
 </html>
