--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <link href="//fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/styles2.css?v=1.0.0-beta.1">
+    <link rel="stylesheet" href="assets/css/styles2.css?v=1.0.0-beta.1.1">
     <title>Treinafácil</title>
   </head>
   <body>
@@ -40,7 +40,9 @@
             <h1 class="logo">Treinafácil</h1>
             <p class="intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, quidem asperiores. In, iusto.</p>
             <a 
-              class="btn-game btn-game--contrast --mx-auto js-goto-section" data-target="1" data-content="content-1">
+              data-target="1" 
+              data-content="content-1"
+              class="btn-game btn-game--contrast --mx-auto js-goto-section py-3">
               <span class="btn-game__text">Como funciona?</span>
             </a>
           </div>
@@ -54,24 +56,62 @@
               <div class="info-box__content">
                 <h2 class="info-box__title">Motivação</h2>
                 <p class="info-box__text">Com uma interface lúdica e divertida, a plataforma transforma seus colaboradores em jogadores, facilitando e estimulando um melhor aprendizado.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-2"
+                    class="btn-game btn-game--primary ml-auto js-trigger-module">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--mountain-2 js-content" id="content-2">
               <div class="info-box__content">
                 <h2 class="info-box__title">Engajamento</h2>
                 <p class="info-box__text">Os jogadores tem a missão de superar "desafios" até chegar ao topo da montanha, concluíndo o treinamento. Cada desafio é um módulo com aulas e provas que podem ser criadas em diversos formatos.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-1"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                  <button 
+                    data-content="content-3"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--mountain-3 js-content" id="content-3">
               <div class="info-box__content">
                 <h2 class="info-box__title">Competitividade</h2>
                 <p class="info-box__text">Através de rankings dinâmicos, os colaboradores são incentivados a uma animada competição para determinar quem é o melhor jogador da turma.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-2"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                  <button 
+                    data-content="content-4"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--mountain-4 js-content" id="content-4">
               <div class="info-box__content">
                 <h2 class="info-box__title">Recompensa</h2>
                 <p class="info-box__text">De acordo com os resultados de cada módulo, os jogadores são premiados com medalhas, reconhecendo a dedicação e as conquistas de cada um.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-3"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="board__place">
@@ -102,37 +142,98 @@
               <div class="info-box__content">
                 <!-- <h2 class="info-box__title">Motivação</h2> -->
                 <p class="info-box__text">Conteúdo para aulas em vídeo, texto, imagem e arquivos para download.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-6"
+                    class="btn-game btn-game--primary js-trigger-module ml-auto">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--space-2 js-content" id="content-6">
               <div class="info-box__content">
                 <!-- <h2 class="info-box__title">Engajamento</h2> -->
                 <p class="info-box__text">Cadastro de alunos, turmas e controle de acesso com bloqueio de horário.</p>
-                
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-5"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                  <button 
+                    data-content="content-7"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--space-3 js-content" id="content-7">
               <div class="info-box__content">
                 <!-- <h2 class="info-box__title">Competitividade</h2> -->
                 <p class="info-box__text">Provas com diferentes opções de resposta (objetiva, múltipla escolha, relacionar colunas e verdadeiro ou falso).</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-6"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                  <button 
+                    data-content="content-8"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--space-4 js-content" id="content-8">
               <div class="info-box__content">
                 <!-- <h2 class="info-box__title">Recompensa</h2> -->
                 <p class="info-box__text">Possibilidade de integração com outros sistemas através da nossa API.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-7"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                  <button 
+                    data-content="content-9"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--space-5 js-content" id="content-9">
               <div class="info-box__content">
                 <!-- <h2 class="info-box__title">Recompensa</h2> -->
                 <p class="info-box__text">Definição de regras para aprovação/reprovação e entrega de medalhas virtuais.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-8"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                  <button 
+                    data-content="content-10"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Próximo</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="info-box info-box--space-6 js-content" id="content-10">
               <div class="info-box__content">
                 <!-- <h2 class="info-box__title">Recompensa</h2> -->
                 <p class="info-box__text">Suporte bilíngue com tempo médio de resposta em 12 minutos e 94% de satisfação.</p>
+                <div class="info-box__navigation">
+                  <button 
+                    data-content="content-9"
+                    class="btn-game btn-game--primary js-trigger-module">
+                    <div class="btn-game__text">Anterior</div>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="board__place">
@@ -168,6 +269,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.5/svg.min.js"></script>
-    <script src="assets/js/scripts2.js?v=1.0.0-beta.1"></script>
+    <script src="assets/js/scripts2.js?v=1.0.0-beta.1.1"></script>
   </body>
 </html>
