Correções para a dimesão de tela a partir de 576px

--- a/index2.html
+++ b/index2.html
@@ -42,8 +42,7 @@
               <h1 class="logo">Treinafácil</h1>
               <p class="intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, quidem asperiores. In, iusto.</p>
               <a 
-                data-target="1" 
-                data-content="content-1"
+                href="#beneficios"
                 class="btn-game btn-game--contrast --mx-auto js-goto-section py-3">
                 <span class="btn-game__text">Como funciona?</span>
               </a>
@@ -268,12 +267,12 @@
             <div class="container">
               <form 
                 action="" 
-                class="form mt-3" 
+                class="form" 
                 data-msg-required-field="Este campo é obrigatório!"
                 data-msg-invalid-email="O email informado é inválido!"
                 id="frm-contact">
                 <div class="row">
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-nome" class="form-control-label">Nome</label>
                       <input
@@ -285,7 +284,7 @@
                         required>
                     </div>
                   </div>
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-email" class="form-control-label">Email</label>
                       <input
@@ -297,7 +296,7 @@
                         required>
                     </div>
                   </div>
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-fone" class="form-control-label">Telefone</label>
                       <input
@@ -309,7 +308,7 @@
                         required>
                     </div>
                   </div>
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-empresa" class="form-control-label">LinkedIn</label>
                       <input
@@ -321,7 +320,7 @@
                         required>
                     </div>
                   </div>
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-empresa" class="form-control-label">Site</label>
                       <input
@@ -333,7 +332,7 @@
                         required>
                     </div>
                   </div>
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <label for="frm-mensagem" class="form-control-label">Mensagem</label>
                     <textarea
                       id="frm-mensagem"
@@ -345,7 +344,7 @@
                   </div>
                 </div>
                 <div class="row mt-3">
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <button class="btn-game btn-game--primary p-3 w-100">
                       <span class="btn-game__text">Enviar</span>
                     </button>
