Ajustes nas resoluções acima de 768px

--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
         <section class="section section--intro" data-anchor="inicio">
           <div class="section__content">
             <div class="section__content">
-              <h1 class="logo">Treinafácil</h1>
+              <h2 class="logo">Treinafácil</h2>
               <p class="intro">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, quidem asperiores. In, iusto.</p>
               <a 
                 href="#beneficios"
@@ -284,6 +284,8 @@
                         required>
                     </div>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-email" class="form-control-label">Email</label>
@@ -296,6 +298,8 @@
                         required>
                     </div>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-fone" class="form-control-label">Telefone</label>
@@ -308,6 +312,8 @@
                         required>
                     </div>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-empresa" class="form-control-label">LinkedIn</label>
@@ -320,6 +326,8 @@
                         required>
                     </div>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <div class="form-group">
                       <label for="frm-empresa" class="form-control-label">Site</label>
@@ -332,6 +340,8 @@
                         required>
                     </div>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-12 col-sm-8 col-md-6 mx-auto">
                     <label for="frm-mensagem" class="form-control-label">Mensagem</label>
                     <textarea
