--- a/index.html
+++ b/index.html
@@ -362,6 +362,12 @@
                 </div>
               </form>
             </div>
+            <div class="footer">
+              <span class="copyright">TreinaFácil &copy; 2018 - Todos os direitos reservados.</span>
+              <span class="phone">+55 48 4321 1234</span>
+              <span class="phone">+55 48 4321 1234</span>
+              <span class="phone">+55 48 4321 1234</span>
+            </div>
           </div>
         </section>
       </div>
