--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.min.css">
-    <link rel="stylesheet" href="assets/css/styles2.css?v=1.0.0-beta.2.5">
+    <link rel="stylesheet" href="assets/css/styles2.css?v=1.0.0-beta.3">
     <title>Treinafácil</title>
     <style>
       .wrapper {
@@ -104,7 +104,7 @@
           <div class="section__content">
             <div class="section__content">
               <h2 class="logo">Treinafácil</h2>
-              <p class="intro">Garanta mais engajamento nos treinamentos comporativos da sua empresa</p>
+              <p class="intro">Garanta mais engajamento nos treinamentos comporativos da sua empresa.</p>
               <a 
                 href="#beneficios"
                 class="btn-game btn-game--contrast --mx-auto js-goto-section py-3">
@@ -485,6 +485,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
     <script src="assets/js/mask/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.min.js"></script>
-    <script src="assets/js/scripts2.js?v=1.0.0-beta.2.5"></script>
+    <script src="assets/js/scripts2.js?v=1.0.0-beta.3"></script>
   </body>
 </html>
