Ajustes solicitados pelo marketing: tamanho logo e texto; botões de próximo nas últimas caixas da montanha e do espaço; destaque na primeira frase do contato

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="//fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.min.css">
-    <link rel="stylesheet" href="assets/css/styles2.css?v=1.0.0-beta.3">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0-beta.3">
     <title>Treinafácil</title>
     <style>
       .wrapper {
@@ -104,7 +104,7 @@
           <div class="section__content">
             <div class="section__content">
               <h2 class="logo">Treinafácil</h2>
-              <p class="intro">Garanta mais engajamento nos treinamentos comporativos da sua empresa.</p>
+              <p class="intro">Garanta mais engajamento nos treinamentos corporativos da sua empresa.</p>
               <a 
                 href="#beneficios"
                 class="btn-game btn-game--contrast --mx-auto js-goto-section py-3">
@@ -176,6 +176,12 @@
                       class="btn-game btn-game--primary js-trigger-module">
                       <div class="btn-game__text">Anterior</div>
                     </button>
+                    <a 
+                      href="#funcionalidades"
+                      data-target="2"
+                      class="btn-game btn-game--primary">
+                      <div class="btn-game__text">Próximo</div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -208,6 +214,11 @@
                   <!-- <h2 class="info-box__title">Motivação</h2> -->
                   <p class="info-box__text">Conteúdo para aulas em vídeo, texto, imagem e arquivos para download.</p>
                   <div class="info-box__navigation">
+                    <a 
+                      href="#beneficios"
+                      class="btn-game btn-game--primary">
+                      <div class="btn-game__text">Anterior</div>
+                    </a>
                     <button 
                       data-content="content-6"
                       class="btn-game btn-game--primary js-trigger-module ml-auto">
@@ -298,6 +309,11 @@
                       class="btn-game btn-game--primary js-trigger-module">
                       <div class="btn-game__text">Anterior</div>
                     </button>
+                    <a 
+                      href="#contato"
+                      class="btn-game btn-game--primary">
+                      <div class="btn-game__text">Próximo</div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -328,7 +344,7 @@
         <!--  end funcionalidades - espaço-->
         <section class="section section--contact" data-anchor="contato">
           <div class="section__content">
-            <p class="intro mx-auto"> Quer gerar mais motivação no aprendizado da sua equipe? <br>
+            <p class="intro mx-auto"> <strong class="--emphasis">Quer gerar mais motivação no aprendizado da sua equipe?</strong> <br>
                 Preencha o formulário abaixo e solicite o seu teste grátis!</p>
             <div class="container">
               <form 
@@ -485,6 +501,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
     <script src="assets/js/mask/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.2/fullpage.min.js"></script>
-    <script src="assets/js/scripts2.js?v=1.0.0-beta.3"></script>
+    <script src="assets/js/scripts.js?v=1.0.0-beta.3"></script>
   </body>
 </html>
